final commit on css

--- a/week1-Structure & Styling/3_file naming_and_css.html
+++ b/week1-Structure & Styling/3_file naming_and_css.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>CSS</title>
 	<link rel="stylesheet" href="">
+
+	<style>h4{color: blue}</style>
 </head>
 <body>
 
@@ -60,7 +62,25 @@ Declarations consist of a property and a value. The property is the style attrib
 </ul>
 
 
-<h4>Find more on CSS at:</h4> <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">More CSS</a>
+<h4>Find more on CSS at:</h4> <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">More CSS</a> and at <a href="http://www.w3schools.com/css">StyleSheets</a>
+
+<hr>
+
+<h4>Three ways of INSERTING CSS into your HTML page</h4>
+<ul>
+	<li>Inline Style</li>
+	<li>Internal Style sheet</li>
+	<li>External Style sheet</li>
+</ul>
+
+<h3>Example</h3>
+<li><h1 style="color:red;margin-left:30px;">This is a RED heading because of an inline css</h1></li>
+<li><h1>All "h4" headings will be blue using this internal css </h1></li>
+<code><style>h4{color: blue}</style></code>
+<li> All lists will be underlined because of an external style sheet</li>
+<link rel="stylesheet" href="CSS/3_external_style_sheet.css">
+
+
 
 	
 </body>
