Hard coding links :(

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h1>
 <a name="monthapp" class="anchor" href="#monthapp"><span class="octicon octicon-link"></span></a>MonthApp</h1>
 
-<p><a href="http://sites.google.com/site/monthappgtuc">MonthApp</a></p>
+<p><a href="http://jeffgodwyll.github.io/MonthApp/">MonthApp</a></p>
 
 <p>Lessons from the MonthApp module (code that goes with the lectures).</p>
 
@@ -45,7 +45,7 @@
 <h1>
 <a name="week-1---structure--styling" class="anchor" href="#week-1---structure--styling"><span class="octicon octicon-link"></span></a>Week 1 - Structure &amp; Styling</h1>
 
-<p><a href="week1-Structure%20&amp;%20Styling">Week 1 code</a></p>
+<p><a href="https://github.com/jeffgodwyll/MonthApp/blob/master/week1-Structure%20&%20Styling">Week 1 code</a></p>
 
 <p>The lessons appear in the order that they were taught.</p>
 
@@ -54,19 +54,19 @@
 <h1>
 <a name="week-2---frameworks--ux" class="anchor" href="#week-2---frameworks--ux"><span class="octicon octicon-link"></span></a>Week 2 - Frameworks &amp; UX</h1>
 
-<p><a href="week2-Framework%20&amp;%20UX">Week 2 presentation</a></p>
+<p><a href="http://jeffgodwyll.github.io/MonthApp/week2-Framework%20&%20UX">Week 2 presentation</a></p>
 
 <p>This week was just about UX, mockups and some helpful tips to come up with appealing designs for your app.</p>
 
 <h1>
 <a name="week-3---prototyping" class="anchor" href="#week-3---prototyping"><span class="octicon octicon-link"></span></a>Week 3 - Prototyping</h1>
 
-<p><a href="week3-Prototyping">Week 3 code</a></p>
+<p><a href="http://jeffgodwyll.github.io/MonthApp/week3-Prototyping">Week 3 code</a></p>
 
 <p>Introduction to jquery and bootstrap for quick prototyping</p>
 
 <h1>
-<a name="week-4--packaging" class="anchor" href="#week-4--packaging"><span class="octicon octicon-link"></span></a>Week 4 -Packaging</h1>
+<a name="week-4--packaging" class="anchor" href="https://github.com/jeffgodwyll/MonthApp/blob/master/week4-Packaging"><span class="octicon octicon-link"></span></a>Week 4 -Packaging</h1>
 
 <p><a href="week4-Packaging">Week 4 walkthrough</a></p>
         </section>
