--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Monthapp by jeffgodwyll</title>
+    <title>Monthapp</title>
   </head>
 
   <body>
@@ -54,21 +54,21 @@
 <h1>
 <a name="week-2---frameworks--ux" class="anchor" href="#week-2---frameworks--ux"><span class="octicon octicon-link"></span></a>Week 2 - Frameworks &amp; UX</h1>
 
-<p><a href="http://jeffgodwyll.github.io/MonthApp/week2-Framework%20&%20UX">Week 2 presentation</a></p>
+<p><a href="https://github.com/jeffgodwyll/MonthApp/blob/master/week2-Framework%20&%20UX">Week 2 presentation</a></p>
 
 <p>This week was just about UX, mockups and some helpful tips to come up with appealing designs for your app.</p>
 
 <h1>
 <a name="week-3---prototyping" class="anchor" href="#week-3---prototyping"><span class="octicon octicon-link"></span></a>Week 3 - Prototyping</h1>
 
-<p><a href="http://jeffgodwyll.github.io/MonthApp/week3-Prototyping">Week 3 code</a></p>
+<p><a href="https://github.com/jeffgodwyll/MonthApp/blob/master/week3-Prototyping">Week 3 code</a></p>
 
 <p>Introduction to jquery and bootstrap for quick prototyping</p>
 
 <h1>
 <a name="week-4--packaging" class="anchor" href="https://github.com/jeffgodwyll/MonthApp/blob/master/week4-Packaging"><span class="octicon octicon-link"></span></a>Week 4 -Packaging</h1>
 
-<p><a href="week4-Packaging">Week 4 walkthrough</a></p>
+<p><a href="https://github.com/jeffgodwyll/MonthApp/blob/master/week4-Packaging">Week 4 walkthrough</a></p>
         </section>
 
         <aside id="sidebar">
