--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <h1>
 <a name="intro" class="anchor" href="#intro"><span class="octicon octicon-link"></span></a>Intro</h1>
 
+<p><a href="https://github.com/jeffgodwyll/MonthApp/blob/master/Intro/INTRO.md">Intro Doc</a></p>
+
 <p>This begins the module. Puts in place necessary house rules. Include setup files and tools and their varying alternatives.</p>
 
 <p>This is an introduction to the whole concept of the MonthApp module.</p>
