begun new tut. 4

--- a/week1-Structure & Styling/3_file naming_and_css.html
+++ b/week1-Structure & Styling/3_file naming_and_css.html
@@ -81,6 +81,10 @@ Declarations consist of a property and a value. The property is the style attrib
 <link rel="stylesheet" href="CSS/3_external_style_sheet.css">
 
 
+<b>note</b>: These methods of inserting <em>items</em> into your HTML page are not limited to only <em>CSS</em>.
+<em>Javascript(JS)</em> is often also embedded into HTML pages in the same fashion. Do not be worried if you do see any such additions. They are no different than what you already know.
+
+
 
 	
 </body>
