signing off on page 4

--- a/week1-Structure & Styling/4_viewport_et_al.html
+++ b/week1-Structure & Styling/4_viewport_et_al.html
@@ -16,6 +16,7 @@ One of the most important features of style sheets is that they specify how a do
 
 Certain CSS properties are only designed for certain media (e.g., the 'page-break-before' property only applies to paged media). On occasion, however, style sheets for different media types may share a property, but require different values for that property. For example, the 'font-size' property is useful both for screen and print media. The two media types are different enough to require different values for the common property; a document will typically need a larger font on a computer screen than on paper. Therefore, it is necessary to express that a style sheet, or a section of a style sheet, applies to certain media types.
 </div>
+<hr>
 <div class="mediatypes">
 	<b>Recognised media types</b><br>
 	The names chosen for CSS media types reflect target devices for which the relevant properties make sense. In the following list of CSS media types the names of media types are normative, but the descriptions are informative. Likewise, the "Media" field in the description of each property is informative. <br> <hr>
@@ -55,6 +56,7 @@ This would target print devices and provide specific styling for the page conten
 You can use media queries in the media attribute of your external stylesheets to target screen width, device width, orientation, etc
 	
 </div>
+<hr>
 
 <div class="targetmdevices">
 	<b>Targetting Screen Sizes</b>
@@ -75,7 +77,7 @@ Media queries can also appear within inline &ltstyle&gt tags. The following targ
 &lt/style&gt</em>
 
 </div>
-
+<hr>
 <div class="viewportuses">
 		<br>
 	
@@ -98,8 +100,11 @@ Media queries can also appear within inline &ltstyle&gt tags. The following targ
 If you want to modify your web page for different screen densities, use the -webkit-device-pixel-ratio CSS media query and/or the window.devicePixelRatio property in JavaScript, then set the target-densitydpi meta property to device-dpi. This stops Android from performing scaling in your web page and allows you to make the necessary adjustments for each density, via CSS and JavaScript.</p>
 
 </div>
+<hr>
 
 <p><em>Google is your friend. You need more, you read more.</em></p>
+
+<p><em>Visit <a href="http://learn.shayhowe.com/html-css/building-your-first-web-page/">this site</a>" for more detailed explanations. </em></p>
 	
 
 </body>
